fix overflowing images

--- a/styles/agamotto.css
+++ b/styles/agamotto.css
@@ -47,6 +47,7 @@
 }
 .h5p-agamotto .h5p-agamotto-wrapper .h5p-agamotto-images-container {
   position: relative;
+  overflow: hidden;
 }
 .h5p-agamotto .h5p-agamotto-image-top {
   position: absolute;
